err.txt
C:\Users\Acer.BILOS-LAPTOP\.gemini\antigravity\scratch\monopoly-game\public\lib\lobby.js:268
        btn.addEventListener('click', () => overlay.classList.add('hidden');
                                                                          ^

SyntaxError: missing ) after argument list
    at wrapSafe (node:internal/modules/cjs/loader:1692:18)
    at checkSyntax (node:internal/main/check_syntax:76:3)

Node.js v24.13.0
